Organized file structure

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Berlin Sans FB';
-    src: url(berlin-sans-fb.ttf);
+    src: url(assets/berlin-sans-fb.ttf);
 }
 
 * {
@@ -58,12 +58,8 @@ nav {
     height: 24px;
 }
 
-#nav-info a img:nth-of-type(2) {
+#nav-info a:nth-of-type(2) {
     margin: 0 .5rem;
-}
-
-#nav-info img:last-of-type {
-    margin: 0;
 }
 
 main {
