--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,32 @@ nav {
     margin: 0 .5rem;
 }
 
+nav button {
+    border-radius: 0;
+    border: 2px solid white;
+    color: white;
+    background: none;
+    font-size: 1rem;
+    padding: .25rem 1rem;
+    margin-top: .75rem;
+    transition: .3s all;
+    cursor: pointer;
+}
+
+nav button:hover {
+    background: white;
+    color: black;
+}
+
 main {
     background: #96bebe;
     width: 100%;
+    padding: 1.5rem;
+}
+
+main h1 {
+    margin: 0;
+    font-family: 'Berlin Sans FB';
 }
 
 @media screen and (max-width: 687px) {
