--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,9 @@ nav button:hover {
 }
 
 main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #96bebe;
     width: 100%;
     padding: 1.5rem;
@@ -101,5 +104,11 @@ main h1 {
 
     main {
         flex: 1;
+        padding: 0;
+    }
+
+    main h1 {
+        padding: 1rem;
+        text-align: center;
     }
 }
