--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* Universal Declarations */
+
 @font-face {
     font-family: 'Berlin Sans FB';
     src: url(assets/berlin-sans-fb.ttf);
@@ -5,6 +7,7 @@
 
 * {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -12,6 +15,8 @@ body {
     display: flex;
     min-height: 100vh;
 }
+
+/* Side Navigation */
 
 nav {
     display: flex;
@@ -79,11 +84,10 @@ nav button:hover {
     color: black;
 }
 
+/* Main Section */
+
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #96bebe;
+    background: linear-gradient(135deg, #96bebe 0%,#4e7e7e 100%);
     width: 100%;
     padding: 1.5rem;
 }
@@ -91,6 +95,70 @@ main {
 main h1 {
     margin: 0;
     font-family: 'Berlin Sans FB';
+}
+
+#items {
+    display: flex;
+}
+
+#items a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+#items a:hover {
+    color: white;
+    text-shadow: 0 0 3px white;
+}
+
+#items img {
+    width: 400px;
+    margin: 1rem 0;
+    filter: grayscale(100%);
+}
+
+#items img:hover {
+    filter: grayscale(50%);
+    box-shadow: 0 0 5px white;
+}
+
+/* Overlay */
+
+#overlay {
+    position: fixed;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: black;
+    opacity: .9;
+}
+
+#overlay button {
+    border-radius: 0;
+    border: 2px solid white;
+    color: white;
+    background: none;
+    font-size: 1rem;
+    padding: .25rem 1rem;
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem
+}
+
+#overlay iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 @media screen and (max-width: 687px) {
@@ -110,5 +178,14 @@ main h1 {
     main h1 {
         padding: 1rem;
         text-align: center;
+    }
+
+    #items {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #items img {
+        width: 300px;
     }
 }
