Added first portfolio item

--- a/styles.css
+++ b/styles.css
@@ -10,182 +10,11 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    display: flex;
-    min-height: 100vh;
+a {
+    color: #96bebe;
 }
 
-/* Side Navigation */
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background: black;
-    color: white;
-    max-width: 225px;
-    padding: 1rem;
-}
-
-#nav-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#nav-header h1 {
-    font-family: 'Berlin Sans FB';
-    margin: 0;
-}
-
-#profile-img {
-    border-radius: 50%;
-    width: 75px;
-    height: 75px;
-    margin: .75rem 0;
-}
-
-#nav-header span {
-    padding-bottom: .75rem;
-    text-align: center;
-    border-bottom: 2px solid white;
-}
-
-#nav-info {
-    margin-top: 1rem;
-    display: flex;
-    font-size: 1.5rem;
-}
-
-#nav-info a img {
-    height: 24px;
-}
-
-#nav-info a:nth-of-type(2) {
-    margin: 0 .5rem;
-}
-
-nav button {
-    border-radius: 0;
-    border: 2px solid white;
-    color: white;
-    background: none;
-    font-size: 1rem;
-    padding: .25rem 1rem;
-    margin-top: .75rem;
-    transition: .3s all;
-    cursor: pointer;
-}
-
-nav button:hover {
-    background: white;
-    color: black;
-}
-
-/* Main Section */
-
-main {
-    background: linear-gradient(135deg, #96bebe 0%,#4e7e7e 100%);
-    width: 100%;
-    padding: 1.5rem;
-}
-
-main h1 {
+h1 {
     margin: 0;
     font-family: 'Berlin Sans FB';
-}
-
-#items {
-    display: flex;
-}
-
-#items a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
-    transition: all .3s;
-}
-
-#items a:hover {
-    color: white;
-    text-shadow: 0 0 3px white;
-}
-
-#items img {
-    width: 400px;
-    margin: 1rem 0;
-    filter: grayscale(100%);
-}
-
-#items img:hover {
-    filter: grayscale(50%);
-    box-shadow: 0 0 5px white;
-}
-
-/* Overlay */
-
-#overlay {
-    position: fixed;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: black;
-    opacity: .9;
-}
-
-#overlay button {
-    border-radius: 0;
-    border: 2px solid white;
-    color: white;
-    background: none;
-    font-size: 1rem;
-    padding: .25rem 1rem;
-    cursor: pointer;
-    position: absolute;
-    top: 1rem;
-    right: 1rem
-}
-
-#overlay iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-@media screen and (max-width: 687px) {
-    body {
-        flex-direction: column;
-    }
-
-    nav {
-        max-width: 100%;
-    }
-
-    main {
-        flex: 1;
-        padding: 0;
-    }
-
-    main h1 {
-        padding: 1rem;
-        text-align: center;
-    }
-
-    #items {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #items img {
-        width: 300px;
-    }
 }
