--- a/home.css
+++ b/home.css
@@ -143,6 +143,7 @@ main h1 {
     position: absolute;
     top: 1rem;
     right: 1rem;
+    opacity: .8;
 }
 
 #overlay iframe {
@@ -166,7 +167,7 @@ main h1 {
     }
 
     main h1 {
-        padding: 1rem;
+        padding-top: 1rem;
         text-align: center;
     }
 
