--- a/home.css
+++ b/home.css
@@ -17,27 +17,27 @@ nav {
     padding: 1rem;
 }
 
-#nav-header {
+nav header {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#nav-header h1 {
+nav header h1 {
     margin: 0;
 }
 
-#profile-img {
+nav header img {
     border-radius: 50%;
     width: 75px;
     height: 75px;
     margin: .75rem 0;
 }
 
-#nav-header span {
+nav header span {
     padding-bottom: .75rem;
-    text-align: center;
     border-bottom: 2px solid white;
+    text-align: center;
 }
 
 #nav-info {
