--- a/home.css
+++ b/home.css
@@ -85,6 +85,7 @@ main h1 {
 
 #items {
     display: flex;
+    justify-content: space-around;
 }
 
 #items a {
@@ -103,6 +104,7 @@ main h1 {
 
 #items img {
     width: 400px;
+    height: 230px;
     margin: 1rem 0;
     filter: grayscale(100%);
 }
