--- a/overlay.css
+++ b/overlay.css
@@ -3,11 +3,13 @@ body {
     color: white;
     padding: 1.5rem;
     margin: 0;
+    height: 100%;
 }
 
 main {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     max-width: 825px;
     margin: auto;
@@ -40,6 +42,17 @@ main {
 
 .images div img:first-of-type {
     margin-right: 1rem;
+}
+
+.images-mobile {
+    width: 100%;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.images-mobile img {
+    height: 400px;
 }
 
 @media screen and (max-width: 850px) {
