--- a/overlay.css
+++ b/overlay.css
@@ -48,7 +48,7 @@ main {
     width: 100%;
     margin-top: 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .images-mobile img {
