--- a/overlay.css
+++ b/overlay.css
@@ -1,3 +1,5 @@
+/* Universal */
+
 body {
     display: flex;
     color: white;
@@ -24,8 +26,10 @@ main {
     margin-bottom: 0;
 }
 
+/* Image Section */
+
 .images {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .images > div {
@@ -45,9 +49,10 @@ main {
     margin-right: 1rem;
 }
 
+/* Mobile Images */
+
 .images-mobile {
     width: 100%;
-    margin-top: 1rem;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -56,6 +61,8 @@ main {
 .images-mobile img {
     height: 400px;
 }
+
+/* Responsive */
 
 @media screen and (max-width: 850px) {
     .images div img {
