Improved home responsiveness

--- a/home.css
+++ b/home.css
@@ -13,6 +13,7 @@ nav {
     flex-direction: column;
     background: black;
     color: white;
+    min-width: 225px;
     max-width: 225px;
     padding: 1rem;
 }
@@ -159,7 +160,7 @@ main h1 {
 
 /* Responsive */
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1500px) {
     body {
         flex-direction: column;
     }
@@ -170,7 +171,7 @@ main h1 {
 
     main {
         flex: 1;
-        padding: 0;
+        padding: 0 1.5rem;
     }
 
     main h1 {
@@ -187,8 +188,12 @@ main h1 {
         margin-bottom: 1rem;
     }
 
+    #items a:first-of-type {
+        margin: 0;
+    }
+
     #items img {
-        width: 300px;
+        width: 100%;
         height: auto;
     }
 
