--- a/home.css
+++ b/home.css
@@ -22,6 +22,9 @@ nav header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom: 2px solid white;
+    padding-bottom: .75rem;
+    text-align: center;
 }
 
 nav header h1 {
@@ -32,19 +35,12 @@ nav header img {
     border-radius: 50%;
     width: 75px;
     height: 75px;
-    margin: .75rem 0;
-}
-
-nav header span {
-    padding-bottom: .75rem;
-    border-bottom: 2px solid white;
-    text-align: center;
+    margin: 1rem 0;
 }
 
 #nav-info {
     margin-top: 1rem;
     display: flex;
-    font-size: 1.5rem;
 }
 
 #nav-info a img {
@@ -53,23 +49,6 @@ nav header span {
 
 #nav-info a:nth-of-type(2) {
     margin: 0 .5rem;
-}
-
-nav button {
-    border-radius: 0;
-    border: 2px solid white;
-    color: white;
-    background: none;
-    font-size: 1rem;
-    padding: .25rem 1rem;
-    margin-top: .75rem;
-    transition: .3s all;
-    cursor: pointer;
-}
-
-nav button:hover {
-    background: white;
-    color: black;
 }
 
 /* Main Section */
@@ -139,13 +118,6 @@ main h1 {
 }
 
 #overlay button {
-    border-radius: 0;
-    border: 2px solid white;
-    color: white;
-    background: black;
-    font-size: 1rem;
-    padding: .25rem 1rem;
-    cursor: pointer;
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -166,16 +138,14 @@ main h1 {
     }
 
     nav {
-        max-width: 100%;
+        min-width: 100%;
     }
 
     main {
         flex: 1;
-        padding: 0 1.5rem;
     }
 
     main h1 {
-        padding-top: 1rem;
         text-align: center;
     }
 
@@ -184,20 +154,30 @@ main h1 {
         align-items: center;
     }
 
-    #items a {
-        margin-bottom: 1rem;
+    #items a:first-of-type {
+        margin-right: 0;
     }
 
-    #items a:first-of-type {
+    #items a:last-of-type {
         margin: 0;
     }
 
-    #items img {
+    #items a img {
         width: 100%;
         height: auto;
     }
 
     #overlay {
         opacity: .95;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    main {
+        padding: 1rem;
+    }
+
+    main h1 {
+        font-size: 1.5rem;
     }
 }
