--- a/overlay.css
+++ b/overlay.css
@@ -15,7 +15,7 @@ main {
     flex-direction: column;
     max-width: 825px;
     margin: auto;
-    padding-bottom: 1.5rem;
+    padding: 50px 0 1.5rem 0;
 }
 
 .site-info h1 {
@@ -70,10 +70,12 @@ main {
         width: 100%;
     }
 
-    .images div img:first-of-type {
-        margin-bottom: 1rem;
+    .images div img:last-of-type {
+        display: none;
     }
+}
 
+@media screen and (max-width: 634px) {
     .images-mobile img {
         width: 100%;
         height: auto;
@@ -82,6 +84,14 @@ main {
 
     .images-mobile img:last-of-type {
         margin: 0;
+    }
+
+    .images div img:first-of-type {
+        display: none;
+    }
+
+    .images div img:last-of-type {
+        display: block;
     }
 }
 
