Fixed old contact info

--- a/home.css
+++ b/home.css
@@ -93,6 +93,7 @@ main h1 {
     height: 345px;
     margin: 1rem 0;
     filter: grayscale(100%);
+    transition: .3s all;
 }
 
 #items img:hover {
